--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,7 @@
 {
   "hosting": {
-    "public": "public",
+    "site": "to-do-list-by-fayaz",  
+    "public": "dist",
     "ignore": [
       "firebase.json",
       "**/.*",
